--- a/snakes/package.json
+++ b/snakes/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/functions": "^7.3.1",
     "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-dialog-input": "^1.0.8",
